--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -1,1 +1,32 @@
+# Pointers in C
 
+A pointer is a variable that holds a memory address. The following example illustrates an example of pointer usage in C:
+
+```C
+int main(int argc, char *argv[])
+{
+  int i = 9;
+  int *ptr = &i;
+  int **p = &ptr;
+
+  // i
+  printf("i = %u\n",i);
+  printf("&i = %u\n",&i);
+  printf("*(&i) = %u\n",*(&i));
+  
+  //ptr
+  printf("ptr = %u\n",ptr);
+  printf("&ptr = %u\n", &ptr);
+  printf("*ptr = %u\n",*ptr);
+  printf("*(&ptr) = %u\n",*ptr);
+  
+  //p
+  printf("p = %u\n",p);
+  printf("&p = %u\n", &p);
+  printf("*p = %u\n",*p);
+  printf("**p = %u\n",**p);
+  printf("*(&p) = %u\n",*(&p));
+  printf("**(&p) = %u\n",**(&p));
+  return 0;
+}
+```
