--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -3,6 +3,9 @@
 A pointer is a variable that holds a memory address. The following example illustrates an example of pointer usage in C:
 
 ```C
+#include <stdio.h>
+#include <stdlib.h>
+
 int main(int argc, char *argv[])
 {
   int i = 9;
@@ -10,7 +13,7 @@ int main(int argc, char *argv[])
   int **p = &ptr;
 
   // i
-  printf("i = %u\n",i);
+  printf("i = %d\n",i);
   printf("&i = %u\n",&i);
   printf("*(&i) = %u\n",*(&i));
   
@@ -18,7 +21,7 @@ int main(int argc, char *argv[])
   printf("ptr = %u\n",ptr);
   printf("&ptr = %u\n", &ptr);
   printf("*ptr = %u\n",*ptr);
-  printf("*(&ptr) = %u\n",*ptr);
+  printf("*(&ptr) = %u\n",*(&ptr));
   
   //p
   printf("p = %u\n",p);
