--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -33,3 +33,21 @@ int main(int argc, char *argv[])
   return 0;
 }
 ```
+
+Output:
+
+```C
+i = 9
+&i = 3088437364
+*(&i) = 9
+ptr = 3088437364
+&ptr = 3088437368
+*ptr = 9
+*(&ptr) = 3088437364
+p = 3088437368
+&p = 3088437376
+*p = 3088437364
+**p = 9
+*(&p) = 3088437368
+**(&p) = 3088437364
+```
