--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -1,8 +1,13 @@
 # Pointers in C
 
-A pointer is a variable that holds a memory address. The following example illustrates an example of pointer usage in C:
-
 ```C
+
+/***********************************************************************
+** This example illustrates the following:                            **
+** concept of pointers                                                **
+** usage of address (&) and indirecton or dereferencing (*) operators **
+************************************************************************/
+
 #include <stdio.h>
 #include <stdlib.h>
 
