--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -56,3 +56,116 @@ p = 3088437368
 *(&p) = 3088437368
 **(&p) = 3088437364
 ```
+
+```C
+
+/***********************************************************************
+** This example illustrates why pointers of a particular type need to **
+** point to variables of corresponding types only                     **
+************************************************************************/
+
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char *argv[])
+{
+  int i = 9;
+  char c = 'A';
+  int *iptr = &i;
+  char *cptr = &c;
+
+
+  printf("i and c\n");
+  printf("i = %d\n", i);
+  printf("&i= %u\n", &i);
+  printf("c = %c\n", c);
+  printf("&c = %u\n", &c);
+  printf("-----------------------------\n");
+
+  printf("Correct Assignments\n");
+  printf("iptr = %u\n", iptr);
+  printf("*iptr = %d\n", *iptr);
+  printf("cptr = %u\n", cptr);
+  printf("*cptr = %c\n", *cptr);
+  printf("-----------------------------\n");
+  
+  printf("iptr = &c; cptr = &i;\n");
+  iptr = &c;
+  cptr = &i;  
+  printf("iptr = %u\n", iptr);
+  printf("*iptr = %d\n", *iptr);
+  printf("cptr = %u\n", cptr);
+  printf("*cptr = %c\n", *cptr);
+  printf("-----------------------------\n");
+
+  printf("iptr = (int*)c; cptr = (char*)&i;\n");
+  iptr = (int*)&c;
+  cptr = (char*)&i;  
+  printf("iptr = %u\n", iptr);
+  printf("*iptr = %d\n", *iptr);
+  printf("cptr = %u\n", cptr);
+  printf("*cptr = %c\n", *cptr);
+  printf("-----------------------------\n");
+  
+  printf("iptr = cptr\n");
+  iptr = cptr;
+  printf("iptr = %u\n", iptr);
+  printf("*iptr = %d\n", *iptr);
+  printf("cptr = %u\n", cptr);
+  printf("*cptr = %c\n", *cptr);
+  printf("-----------------------------\n");
+  
+  printf("iptr = &cptr\n");
+  iptr = &cptr;
+  printf("iptr = %u\n", iptr);
+  printf("*iptr = %d\n", *iptr);
+  printf("cptr = %u\n", cptr);
+  printf("*cptr = %c\n", *cptr);
+  printf("-----------------------------\n");
+
+  return 0;
+
+}
+
+```
+
+Output:
+
+```
+i and c
+i = 9
+&i= 3905468148
+c = A
+&c = 3905468147
+-----------------------------
+Correct Assignments
+iptr = 3905468148
+*iptr = 9
+cptr = 3905468147
+*cptr = A
+-----------------------------
+iptr = &c; cptr = &i;
+iptr = 3905468147
+*iptr = 2369
+cptr = 3905468148
+*cptr = 	
+-----------------------------
+iptr = (int*)c; cptr = (char*)&i;
+iptr = 3905468147
+*iptr = 2369
+cptr = 3905468148
+*cptr = 	
+-----------------------------
+iptr = cptr
+iptr = 3905468148
+*iptr = 9
+cptr = 3905468148
+*cptr = 	
+-----------------------------
+iptr = &cptr
+iptr = 3905468152
+*iptr = -389499148
+cptr = 3905468148
+*cptr = 	
+-----------------------------
+```
