--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -61,7 +61,7 @@ p = 3088437368
 
 /***********************************************************************
 ** This example illustrates why pointers of a particular type need to **
-** point to variables of corresponding types only                     **
+** point to variables of corresponding types.                         **
 ************************************************************************/
 
 #include <stdio.h>
