--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -169,3 +169,29 @@ cptr = 3905468148
 *cptr = 	
 -----------------------------
 ```
+
+```C
+
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char *argv[])
+{
+  
+  int i = 9;
+  int *ptr = &i;                                    /* assigning address of a int variable */
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  
+  //ptr = 0;                                          /* assign p = 0 */        ------ Segmentation Fault (core dumped)
+  //printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  
+  //ptr = NULL;                                       /* equivalent to p = 0 */ ------ Segmentation Fault (core dumped)
+  //printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  
+  //ptr = (int*)9999;
+  //printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);   /* assigning p to an absolute address in memory */ ------ Segmentation Fault (core dumped)
+
+  return 0;
+
+}
+```
