--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -178,18 +178,22 @@ cptr = 3905468148
 int main(int argc, char *argv[])
 {
   
+  /* assigning address of a int variable */
   int i = 9;
-  int *ptr = &i;                                    /* assigning address of a int variable */
+  int *ptr = &i;                                    
   printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
   
-  //ptr = 0;                                          /* assign p = 0 */        ------ Segmentation Fault (core dumped)
-  //printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  /* assign p = 0 */                                  ------ Segmentation Fault (core dumped)
+  ptr = 0;                                          
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
   
-  //ptr = NULL;                                       /* equivalent to p = 0 */ ------ Segmentation Fault (core dumped)
-  //printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  /* equivalent to p = 0 */                           ------ Segmentation Fault (core dumped)
+  ptr = NULL;           
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
   
-  //ptr = (int*)9999;
-  //printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);   /* assigning p to an absolute address in memory */ ------ Segmentation Fault (core dumped)
+  /* assigning p to an absolute address in memory */
+  ptr = (int*)9999;
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);     ------ Segmentation Fault (core dumped)
 
   return 0;
 
