--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -183,17 +183,17 @@ int main(int argc, char *argv[])
   int *ptr = &i;                                    
   printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
   
-  /* assign p = 0 */                                  ------ Segmentation Fault (core dumped)
+  /* assign p = 0 */                                            /* Segmentation Fault (core dumped) */
   ptr = 0;                                          
   printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
   
-  /* equivalent to p = 0 */                           ------ Segmentation Fault (core dumped)
+  /* equivalent to p = 0 */                                     /* Segmentation Fault (core dumped) */
   ptr = NULL;           
   printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
   
   /* assigning p to an absolute address in memory */
   ptr = (int*)9999;
-  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);     ------ Segmentation Fault (core dumped)
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);              /* Segmentation Fault (core dumped) */
 
   return 0;
 
