--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -170,6 +170,8 @@ cptr = 3905468148
 -----------------------------
 ```
 
+```%p``` - prints pointer address in hexadecimal and ```%u``` prints pointer address in decimal.
+
 ```C
 
 #include <stdio.h>
