--- a/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
+++ b/08.Arrays-Strings-Pointers/03.Pointers-in-C.md
@@ -57,6 +57,52 @@ p = 3088437368
 **(&p) = 3088437364
 ```
 
+```%p``` - prints pointer address in hexadecimal and ```%u``` prints pointer address in decimal.
+
+```C
+
+/***********************************************************************
+** Legal and illegal pointer assignment operations                    **
+************************************************************************/
+
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char *argv[])
+{
+  
+  /* assigning address of a int variable */
+  int i = 9;
+  int *ptr = &i;                                    
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  
+  /* assign p = 0 */                                            /* Segmentation Fault (core dumped) */
+  ptr = 0;                                          
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  
+  /* equivalent to p = 0 */                                     /* Segmentation Fault (core dumped) */
+  ptr = NULL;           
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
+  
+  /* assigning p to an absolute address in memory */
+  ptr = (int*)9999;
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);              /* Segmentation Fault (core dumped) */
+  
+  ptr = &9;
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);  /* illegal to point at constants */
+  
+  ptr = &(i+9);
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);  /* illegal to point at constants */
+  
+  register reg;
+  ptr = &reg;
+  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);  /* illegal to point at constants */
+
+  return 0;
+
+}
+```
+
 ```C
 
 /***********************************************************************
@@ -168,36 +214,4 @@ iptr = 3905468152
 cptr = 3905468148
 *cptr = 	
 -----------------------------
-```
-
-```%p``` - prints pointer address in hexadecimal and ```%u``` prints pointer address in decimal.
-
-```C
-
-#include <stdio.h>
-#include <stdlib.h>
-
-int main(int argc, char *argv[])
-{
-  
-  /* assigning address of a int variable */
-  int i = 9;
-  int *ptr = &i;                                    
-  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
-  
-  /* assign p = 0 */                                            /* Segmentation Fault (core dumped) */
-  ptr = 0;                                          
-  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
-  
-  /* equivalent to p = 0 */                                     /* Segmentation Fault (core dumped) */
-  ptr = NULL;           
-  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);
-  
-  /* assigning p to an absolute address in memory */
-  ptr = (int*)9999;
-  printf("&ptr = %p and *ptr = %d\n", ptr, *ptr);              /* Segmentation Fault (core dumped) */
-
-  return 0;
-
-}
 ```
