--- a/08.Arrays-Strings-Pointers/NULL-\0-0.md
+++ b/08.Arrays-Strings-Pointers/NULL-\0-0.md
@@ -40,16 +40,16 @@ In C++:
 
 ```
 
-## Null Characters
+## Null Character
 
 '\0' is defined to be a null character - that is a character with all bits set to zero. '\0' is (like all character literals) an integer constant, in this case with the value zero. So '\0' is completely equivalent to an unadorned 0 integer constant - the only difference is in the intent that it conveys to a human reader ("I'm using this as a null character.").
 
 '\0' has nothing to do with pointers. However, you may see something similar to this code:
 
-if (!*char_pointer)
+```C if (!*char_pointer)```
 
 checks if the char pointer is pointing at a null character.
 
-if (*char_pointer)
+```C if (*char_pointer) ```
 
 checks if the char pointer is pointing at a non-null character.
