--- a/08.Arrays-Strings-Pointers/NULL-\0-0.md
+++ b/08.Arrays-Strings-Pointers/NULL-\0-0.md
@@ -1,8 +1,8 @@
 # NULL, '\0' and 0
 
-The macro NULL is an implementation-defined null pointer constant.
+The macro NULL is an implementation-defined null pointer constant. 
 
-In C:
+## C:
 
 The integer constant literal 0 has different meanings depending upon the context in which it's used. In all cases, it is still an integer constant with the value 0, it is just described in different ways. If a pointer is being compared to the constant literal 0, then this is a check to see if the pointer is a null pointer. This 0 is then referred to as a null pointer constant. The C standard defines that 0 cast to the type void * is both a null pointer and a null pointer constant.
 
@@ -28,19 +28,7 @@ if (pointer == mynull)
 
 To the compiler this is not a check for a null pointer, but an equality check on two variables and this is not guaranteed to work always.
 
-In C++:
-
-```C++
-
-// before C++11
-#define NULL 0
-
-// since C++11
-#define NULL nullptr
-
-```
-
-## Null Character
+#### Null Character
 
 '\0' is defined to be a null character - that is a character with all bits set to zero. '\0' is (like all character literals) an integer constant, in this case with the value zero. So '\0' is completely equivalent to an unadorned 0 integer constant - the only difference is in the intent that it conveys to a human reader ("I'm using this as a null character.").
 
@@ -53,3 +41,23 @@ checks if the char pointer is pointing at a null character.
 ```C if (*char_pointer) ```
 
 checks if the char pointer is pointing at a non-null character.
+
+In summary:
+
+* A constant expression of type ```int``` with the value 0, or an expression of this type, cast to type ```void *``` is a **null pointer constant**, which if converted to a pointer becomes a **null pointer**. It is guaranteed by the standard to compare unequal to any pointer to any object or function.
+
+* ```NULL``` is a macro, defined in as a **null pointer constant**.
+
+* ```\0``` is a construction used to represent the null character (a null character is a byte which has all its bits set to 0). Usually used to terminate a string.
+
+## C++:
+
+```C++
+
+// before C++11
+#define NULL 0
+
+// since C++11
+#define NULL nullptr
+
+```
