--- a/08.Arrays-Strings-Pointers/NULL-\0-0.md
+++ b/08.Arrays-Strings-Pointers/NULL-\0-0.md
@@ -6,7 +6,7 @@ The macro NULL is an implementation-defined null pointer constant.
 
 The integer constant literal 0 has different meanings depending upon the context in which it's used. In all cases, it is still an integer constant with the value 0, it is just described in different ways. If a pointer is being compared to the constant literal 0, then this is a check to see if the pointer is a null pointer. This 0 is then referred to as a null pointer constant. The C standard defines that 0 cast to the type void * is both a null pointer and a null pointer constant.
 
-```C #define NULL (void*)0```
+``` #define NULL (void*)0 ```
 
 To help readability, the macro NULL is provided in the header file ```<stddef.h>``` or ```<stdio.h>```. Depending upon the compiler it might be possible to ```#undef NULL``` and redefine it. NULL is defined to compare equal to a null pointer (i.e. a pointer that does not point to any address in memory).
 
