--- a/08.Arrays-Strings-Pointers/NULL-\0-0.md
+++ b/08.Arrays-Strings-Pointers/NULL-\0-0.md
@@ -54,10 +54,10 @@ The macro NULL is an implementation-defined null pointer constant.
 
 ```C++
 
-// before C++11
+// before C++11 - an integral constant expression rvalue of integer type that evaluates to zero
 #define NULL 0
 
-// since C++11
+// since C++11 - an integer literal with value zero, or a prvalue of type std::nullptr_t
 #define NULL nullptr
 
 ```
